--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             </section>
             <section>
                 <h2>You personal travel guide</h2>
-                <p>Excursion remembers places like, and recommends new points of interest around you.</p>
+                <p id="description">Excursion remembers places like, and recommends new points of interest around you.</p>
                 <p><img src="./resources/img/camp.jpg" type="img/jpg"></p>
                 <br/>
                 <p><img src="./resources/img/phone.png" type="img/jpg"></p>
