--- a/home.html
+++ b/home.html
@@ -33,6 +33,6 @@
         </main>
     </body>
     <footer>
-        <p>© Excursion</p>
+        <p class="brand">© Excursion</p>
     </footer>
 </html>
